# cmc-pipeline-transcrip

./: .gitignore  README.md  SpeechToText.py  logprob.txt  pyproject.toml  transcriptedText.txt
frontBack/: app.js  app.py  config.py  package-lock.json  package.json
frontBack/.github/workflows/: ci.yml
frontBack/Backend/: app.py  requirements.txt
frontBack/Frontend/: capacitor.config.json  package-lock.json  package.json  vite.config.js
frontBack/Frontend/android/app/: build.gradle
frontBack/Frontend/android/app/src/main/java/com/mindclass/app/: MainActivity.java
frontBack/Frontend/android/app/src/main/res/values/: strings.xml
frontBack/Frontend/src/: App.jsx  index.css  main.jsx
frontBack/Frontend/src/Services/: api.js
